# fontval-python

./: .gitignore  .travis.yml  README.md  build.py  config.sh  mcs  setup.cfg  setup.py  tox.ini
src/python/fontval/: __init__.py  __main__.py
tests/: test_fontval.py
