[download]
; FontValidator version that is downloaded from setup.py
version = 2.1.2
; expected SHA-256 of the downloaded tarball. E.g. you can calculate it with:
; $ shasum -a 256 Font-Validator-FontVal-X.X.X.tar.gz
sha256 = 833b65fec8f2e0d4143845a77769aa4b90e6bb697115fbdb180adccd55a2408e

[metadata]
license_file = LICENSE
